--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
                 <sub>loading depends on ur pc, its a whole ass channel ur loading up</sub>
                 <div id="link-box">
                     <div class="ind">
-                        <a href="./vouches/n1.html">.gg/auxbot</a>
+                        <a href=".n1.html">.gg/auxbot</a>
                         <sub>current - 22/05/2021</sub>
                     </div>
                     <div class="ind">
-                        <a href="./vouches/o1.html">.gg/aux</a>
+                        <a href=".o1.html">.gg/aux</a>
                         <sub>old - 16/03/2021</sub>
                     </div>
                 </div>
