--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
    <head>
       <title>iku.lol</title>
       <meta charset="UTF-8">
-      <meta name="description" content="iku.lol - it is us who are strong">
-      <meta name="keywords" content="iku.lol, iku, team">
+      <meta name="description" content="mewhub.lol - it is us who are strong">
+      <meta name="keywords" content="mewhub.lol, mewhub, team">
       <meta name="author" content="kumi">
       <meta property="og:type" content="site">
-      <meta property="og:title" content="iku.lol">
-      <meta property="og:description" content="iku.lol - it is us who are strong">
+      <meta property="og:title" content="mewhub.lol">
+      <meta property="og:description" content="mewhub.lol - it is us who are strong">
       <meta property="og:url" content="./">
       <meta property="og:image" content="./assets/icons/as.png">
-      <meta itemprop="name" content="iku.lol">
-      <meta itemprop="description" content="iku.lol - it is us who are strong">
+      <meta itemprop="name" content="mewhub.lol">
+      <meta itemprop="description" content="mewhub.lol - it is us who are strong">
       <meta itemprop="image" content="./assets/icons/as.png">
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
       <link rel="shortcut icon" href="./assets/icons/as.jpg" type="image/x-icon">
@@ -42,7 +42,7 @@
             <span href="./" target="_BLANK">iku.lol</span>
          </h1>
          <h3 class="brand-header">
-            <a class="discord" href="./" target="discord.gg/iku">discord</a>
+            <a class="discord" href="./" target="discord.gg/mewhub">discord</a>
          </h3>
          <br><br>
 
