--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>iku.lol</title>
+      <title>mewhub</title>
       <meta charset="UTF-8">
       <meta name="description" content="mewhub.lol - it is us who are strong">
       <meta name="keywords" content="mewhub.lol, mewhub, team">
@@ -88,7 +88,7 @@
          <i><a class="skip">enter</a></i>
       </div>
       <div class="footer">
-         <i><a href="https://discord.gg/iku" target="_BLANK">Discord</a></i>
+         <i><a href="https://discord.gg/mewhub" target="_BLANK">Discord</a></i>
       </div>
       <script>
          console.log("rape")
