--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
       <div class="container" style="display: none;">
          <h1 class="brand-header">
-            <span href="./" target="_BLANK">mewhubb</span>
+            <span href="./" target="_BLANK">mewhub</span>
          </h1>
          <h3 class="brand-header">
             <a class="discord" href="./" target="discord.gg/mewhub">discord</a>
