--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
    <head>
       <title>mewhub</title>
       <meta charset="UTF-8">
-      <meta name="description" content="mewhub.lol - it is us who are strong">
-      <meta name="keywords" content="mewhub.lol, mewhub, team">
+      <meta name="description" content="mewhub - best pbb exploit">
+      <meta name="keywords" content="mewhub, mewhub, team">
       <meta name="author" content="kumi">
       <meta property="og:type" content="site">
       <meta property="og:title" content="mewhub.lol">
-      <meta property="og:description" content="mewhub.lol - it is us who are strong">
+      <meta property="og:description" content="mewhub - best pbb exploit">
       <meta property="og:url" content="./">
       <meta property="og:image" content="./assets/icons/as.png">
       <meta itemprop="name" content="mewhub.lol">
@@ -85,7 +85,7 @@
          </script>
       </div>
       <div class="top-right">
-         <i><a class="skip">enter</a></i>
+         <i><a class="skip">skip</a></i>
       </div>
       <div class="footer">
          <i><a href="https://discord.gg/mewhub" target="_BLANK">Discord</a></i>
