--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
       <meta charset="UTF-8">
       <meta name="description" content="mewhub - best pbb exploit">
       <meta name="keywords" content="mewhub, mewhub, team">
-      <meta name="author" content="kumi">
+      <meta name="author" content="j2sh">
       <meta property="og:type" content="site">
       <meta property="og:title" content="mewhub.lol">
       <meta property="og:description" content="mewhub - best pbb exploit">
       <meta property="og:url" content="./">
       <meta property="og:image" content="./assets/icons/as.png">
       <meta itemprop="name" content="mewhub.lol">
-      <meta itemprop="description" content="mewhub.lol - it is us who are strong">
+      <meta itemprop="description" content="mewhub - it is us twerk">
       <meta itemprop="image" content="./assets/icons/as.png">
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
       <link rel="shortcut icon" href="./assets/icons/as.jpg" type="image/x-icon">
@@ -39,7 +39,7 @@
       </div>
       <div class="container" style="display: none;">
          <h1 class="brand-header">
-            <span href="./" target="_BLANK">mewhub</span>
+            <span href="./" target="_BLANK">j2sh</span>
          </h1>
          <h3 class="brand-header">
             <a class="Script" href="./" target="https://github.com/bigbootylatinas/MewHub/blob/main/README.md">Script</a>
