--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <meta property="og:description" content="mewhub - best pbb exploit">
       <meta property="og:url" content="./">
       <meta property="og:image" content="./assets/icons/as.png">
-      <meta itemprop="name" content="mewhub.lol">
+      <meta itemprop="name" content="j2sh">
       <meta itemprop="description" content="mewhub - it is us twerk">
       <meta itemprop="image" content="./assets/icons/as.png">
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
