--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <title>mewhub</title>
       <meta charset="UTF-8">
-      <meta name="description" content="mewhub - best pbb exploit">
+      <meta name="description" content="god I love latinas">
       <meta name="keywords" content="mewhub, mewhub, team">
       <meta name="author" content="j2sh">
       <meta property="og:type" content="site">
