--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <span href="./" target="discord.gg/mewhub">j2sh</span>
          </h1>
          <h3 class="brand-header">
-            <a class="Script" href="./" target="https://github.com/bigbootylatinas/MewHub/blob/main/README.md">discord</a>
+            <a class="discord" href="./" target="discord.gg/iku">discord</a>
          </h3>
          <br><br>
 
