--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
       </div>
       <div class="container" style="display: none;">
          <h1 class="brand-header">
-            <span href="./" target="discord.gg/mewhub">j2sh</span>
+            <span href="./" target="">j2sh</span>
          </h1>
          <h3 class="brand-header">
-            <a class="discord" href="./" target="discord.gg/iku">discord</a>
+            <a class="discord" href="./" target="discord.gg/mewhub">discord</a>
          </h3>
          <br><br>
 
