--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <span href="./" target="">j2sh</span>
          </h1>
          <h3 class="brand-header">
-            <a class="discord" href="discord.gg/mewhub" target="_BLANK">discord</a>
+            <a class="discord" href="discord.gg/mewhub" target="_BLANK">contact me</a>
          </h3>
          <br><br>
 
