--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <meta itemprop="description" content="mewhub - it is us twerk">
       <meta itemprop="image" content="./assets/icons/as.png">
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-      <link rel="shortcut icon" href="./assets/icons/as.jpg" type="image/x-icon">
+      <link rel="shortcut icon" href="./assets/icons/frame_17_delay-0.03s.gif" type="image/x-icon">
       <script type="text/javascript" src="./assets/javascript/app.js"></script>
    </head>
    <body>
