--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <meta name="author" content="j2sh">
       <meta property="og:type" content="site">
       <meta property="og:title" content="mewhub.lol">
-      <meta property="og:description" content="mewhub - best pbb exploit">
+      <meta property="og:description" content="god I love latinas">
       <meta property="og:url" content="./">
       <meta property="og:image" content="./assets/icons/as.png">
       <meta itemprop="name" content="j2sh">
