--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <meta name="keywords" content="mewhub, mewhub, team">
       <meta name="author" content="j2sh">
       <meta property="og:type" content="site">
-      <meta property="og:title" content="mewhub.lol">
+      <meta property="og:title" content="josh's site">
       <meta property="og:description" content="god I love latinas">
       <meta property="og:url" content="./">
       <meta property="og:image" content="./assets/icons/as.png">
