--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
          <h3 class="brand-header">
             <a class="discord" href="https://discord.gg/mewhub" target="_BLANK">contact me</a>
          </h3>
+         <h3 class="brand-header">
+            <a class="discord" href="https://www.youtube.com/channel/UCFovORxhtayDW5rmcINy8qQ" target="_BLANK">youtube</a>
+         </h3>
          <br><br>
 
          <p><span id="brand"></span></p>
