--- a/index.html
+++ b/index.html
@@ -42,7 +42,13 @@
             <span href="./" target="">j2sh</span>
          </h1>
          <h3 class="brand-header">
+            <a class="discord" href="./" target="_BLANK">🧌</a>
+         </h3>
+         <h3 class="brand-header">
             <a class="discord" href="https://discord.gg/mewhub" target="_BLANK">contact me</a>
+         </h3>
+         <h3 class="brand-header">
+            <a class="discord" href="./" target="_BLANK"> </a>
          </h3>
          <h3 class="brand-header">
             <a class="discord" href="https://www.youtube.com/channel/UCFovORxhtayDW5rmcINy8qQ" target="_BLANK">youtube</a>
