--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
       <meta property="og:title" content="josh's site">
       <meta property="og:description" content="god I love latinas">
       <meta property="og:url" content="./">
-      <meta property="og:image" content="./assets/icons/as.png">
+      <meta property="og:image" content="./assets/images/f6fca62bede187e35e3de068e93f96fa.gif">
       <meta itemprop="name" content="j2sh">
       <meta itemprop="description" content="mewhub - it is us twerk">
-      <meta itemprop="image" content="./assets/icons/as.png">
+      <meta itemprop="image" content="./assets/images/f6fca62bede187e35e3de068e93f96fa.gif">
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
       <link rel="shortcut icon" href="./assets/icons/frame_17_delay-0.03s.gif" type="image/x-icon">
       <script type="text/javascript" src="./assets/javascript/app.js"></script>
