--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html>
+<meta property="og:url" content="https://www.youtube.com/watch?v=ur3-A7ovGUk">
+<meta property="og:image" content="https://i.ytimg.com/vi/ur3-A7ovGUk/maxresdefault.jpg">
+<meta property="og:video:type" content="text/html">
+<meta property="og:video:url" content="https://www.youtube.com/embed/ur3-A7ovGUk">
+<meta property="og:video:height" content="720">
+<meta property="og:video:width" content="1280">
+<meta property="og:type" content="video.other">
    <head>
       <title>mewhub</title>
       <meta charset="UTF-8">
