--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
-<meta property="og:url" content="https://www.youtube.com/watch?v=ur3-A7ovGUk">
-<meta property="og:image" content="https://i.ytimg.com/vi/ur3-A7ovGUk/maxresdefault.jpg">
-<meta property="og:video:type" content="text/html">
-<meta property="og:video:url" content="https://www.youtube.com/embed/ur3-A7ovGUk">
-<meta property="og:video:height" content="720">
-<meta property="og:video:width" content="1280">
-<meta property="og:type" content="video.other">
+<meta name="title" content="j2sh's portfolio">
+<meta name="description" content="this is my site">
+<meta name="keywords" content="mewhub, script, roblox">
+<meta name="robots" content="index, follow">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="language" content="English">
+<meta name="author" content="j2sh">
+
    <head>
       <title>mewhub</title>
       <meta charset="UTF-8">
