--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
    <head>
-      <title>mewhub</title>
+      <title>j2sh</title>
       <meta charset="UTF-8">
       <meta name="description" content="god I love latinas">
       <meta name="keywords" content="mewhub, mewhub, team">
