--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 
    <head>
       <title>j2sh</title>
+      <meta name="twitter:site" content="@twitter_handle">
+      <meta name="twitter:title" content="j2sh">
+      <meta name="twitter:description" content="Lorem ipsum sit dolor">
+      <meta name="twitter:card" content="summary_large_image">
+      <meta name="twitter:image:src" content="https://cdn.discordapp.com/attachments/450446056686223361/1064017843282251806/IMG_0204.png">
       <meta charset="UTF-8">
       <meta name="description" content="god I love latinas">
       <meta name="keywords" content="mewhub, mewhub, team">
