--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
    <head>
       <title>j2sh</title>
-      <meta name="twitter:site" content="@twitter_handle">
+      <meta name="twitter:site" content="@d2rkrai">
       <meta name="twitter:title" content="j2sh">
       <meta name="twitter:description" content="Lorem ipsum sit dolor">
       <meta name="twitter:card" content="summary_large_image">
