--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <a class="discord" href="./" target="_BLANK"> </a>
          </h3>
          <h3 class="brand-header">
-            <a class="discord" href="https://www.youtube.com/channel/UCFovORxhtayDW5rmcINy8qQ" target="_BLANK">youtube</a>
+            <a class="youtube" href="https://www.youtube.com/channel/UCFovORxhtayDW5rmcINy8qQ" target="_BLANK">youtube</a>
          </h3>
          <br><br>
 
