--- a/index.html
+++ b/index.html
@@ -3,13 +3,8 @@
 
    <head>
       <title>j2sh</title>
-      <meta name="twitter:site" content="@d2rkrai">
-      <meta name="twitter:title" content="j2sh">
-      <meta name="twitter:description" content="Lorem ipsum sit dolor">
-      <meta name="twitter:card" content="summary_large_image">
-      <meta name="twitter:image:src" content="https://cdn.discordapp.com/attachments/450446056686223361/1064017843282251806/IMG_0204.png">
       <meta charset="UTF-8">
-      <meta name="description" content="god I love latinas">
+      <meta name="description" content="god I love latinas https://cdn.discordapp.com/attachments/450446056686223361/1064017843282251806/IMG_0204.png">
       <meta name="keywords" content="mewhub, mewhub, team">
       <meta name="author" content="j2sh">
       <meta property="og:type" content="site">
