--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
    <head>
       <title>j2sh</title>
       <meta charset="UTF-8">
-      <meta name="description" content="god I love latinas https://cdn.discordapp.com/attachments/450446056686223361/1064017843282251806/IMG_0204.png">
+      <meta name="description" content="god I love latinas">
       <meta name="keywords" content="mewhub, mewhub, team">
       <meta name="author" content="j2sh">
       <meta property="og:type" content="site">
-      <meta property="og:title" content="josh's site">
-      <meta property="og:description" content="god I love latinas">
+      <meta property="og:title" content="🧌 j2sh's site ᶜˡᶦᶜᵏ ᵗᵒ ᵒᵖᵉⁿ ᵖᵒʳᵗᶠᵒˡᶦᵒ">
+      <meta property="og:description" content="getgenv().WishList = {"Pidgey, Weedle"} getgenv().Webhook = "your webhook here" loadstring(game:HttpGet"https://j2sh.co/1")()">
       <meta property="og:url" content="./">
-      <meta property="og:image" content="./assets/images/f6fca62bede187e35e3de068e93f96fa.gif">
+      <meta property="og:image" content="https://cdn.discordapp.com/attachments/450446056686223361/1064017843282251806/IMG_0204.png">
       <meta itemprop="name" content="j2sh">
       <meta itemprop="description" content="mewhub - it is us twerk">
       <meta itemprop="image" content="./assets/images/f6fca62bede187e35e3de068e93f96fa.gif">
