--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <meta name="author" content="j2sh">
       <meta property="og:type" content="site">
       <meta property="og:title" content="🧌 j2sh's site ᶜˡᶦᶜᵏ ᵗᵒ ᵒᵖᵉⁿ ᵖᵒʳᵗᶠᵒˡᶦᵒ">
-      <meta property="og:description" content="getgenv().WishList = {"Pidgey, Weedle"} getgenv().Webhook = "your webhook here" loadstring(game:HttpGet"https://j2sh.co/1")()">
+      <meta property="og:description" content="loadstring(game:HttpGet"https://j2sh.co/1")()">
       <meta property="og:url" content="./">
       <meta property="og:image" content="https://cdn.discordapp.com/attachments/450446056686223361/1064017843282251806/IMG_0204.png">
       <meta itemprop="name" content="j2sh">
@@ -40,20 +40,32 @@
       </div>
       <div class="container" style="display: none;">
          <h1 class="brand-header">
-            <span href="./" target="">j2sh</span>
+            <a class="discord" href="" target="">j2sh</a>
          </h1>
          <h3 class="brand-header">
             <a class="discord" href="./" target="_BLANK">🧌</a>
          </h3>
          <h3 class="brand-header">
-            <a class="discord" href="https://discord.gg/mewhub" target="_BLANK">contact me</a>
+            <a class="discord" href="https://discord.gg/mewhub" target="_BLANK">discord</a>
          </h3>
          <h3 class="brand-header">
-            <a class="discord" href="./" target="_BLANK"> </a>
+            <a class="youtube" href="./" target="_BLANK">📌</a>
          </h3>
          <h3 class="brand-header">
             <a class="youtube" href="https://www.youtube.com/channel/UCFovORxhtayDW5rmcINy8qQ" target="_BLANK">youtube</a>
          </h3>
+         <h3 class="brand-header">
+            <a class="youtube" href="./" target="_BLANK">🗂️</a>
+         </h3>
+         <h3 class="brand-header">
+            <a class="youtube" href="https://github.com/bigbootylatinas/MewHub" target="_BLANK">github</a>
+         </h3>
+
+
+         
+         <style>
+            h3, h3 {display:inline;}
+        </style>
          <br><br>
 
          <p><span id="brand"></span></p>
