--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
       <meta name="author" content="j2sh">
       <meta property="og:type" content="site">
       <meta property="og:title" content="🧌 j2sh's site ᶜˡᶦᶜᵏ ᵗᵒ ᵒᵖᵉⁿ ᵖᵒʳᵗᶠᵒˡᶦᵒ">
-      <meta property="og:description" content="loadstring(game:HttpGet"https://j2sh.co/1")()">
+      
+      <p><meta property="og:description" content="loadstring(game:HttpGet"https://j2sh.co/1")()"></p>
+      
       <meta property="og:url" content="./">
-      <meta property="og:image" content="https://cdn.discordapp.com/attachments/450446056686223361/1064017843282251806/IMG_0204.png">
+      <meta property="og:image" content="https://cdn.discordapp.com/attachments/450446056686223361/1090869693369307157/jenna-ortega-wednesday.gif">
       <meta itemprop="name" content="j2sh">
       <meta itemprop="description" content="mewhub - it is us twerk">
       <meta itemprop="image" content="./assets/images/f6fca62bede187e35e3de068e93f96fa.gif">
