--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             var audio = document.getElementById('audio');
             var myvids = [
               "./assets/videos/video2.mp4", 
-              "./assets/videos/video2.mp4", 
+              "./assets/videos/9convert.com - Metro Boomin Future Superhero Heroes Villains Official Music Video_480p.mp4", 
             ];
             var activeVideo = 0;
             activeVideo = Math.floor(Math.random() * myvids.length);
