--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
             <a class="discord" href="" target="">j2sh</a>
          </h1>
          <h3 class="brand-header">
-            <a class="discord" href="https://discord.gg/mewhub" target="_BLANK">🧌</a>
+            <a class="discord" href="https://discord.gg/mewhub" target="_BLANK"> 🧌</a>
          </h3>
          <h3 class="brand-header">
             <a class="discord" href="https://discord.gg/mewhub" target="_BLANK">discord</a>
          </h3>
          <h3 class="brand-header">
-            <a class="youtube" href="https://www.youtube.com/channel/UCFovORxhtayDW5rmcINy8qQ" target="_BLANK">📌</a>
+            <a class="youtube" href="https://www.youtube.com/channel/UCFovORxhtayDW5rmcINy8qQ" target="_BLANK"> 📌</a>
          </h3>
          <h3 class="brand-header">
             <a class="youtube" href="https://www.youtube.com/channel/UCFovORxhtayDW5rmcINy8qQ" target="_BLANK">youtube</a>
@@ -103,7 +103,7 @@
             var audio = document.getElementById('audio');
             var myvids = [
               "./assets/videos/video2.mp4", 
-              "./assets/videos/9convert.com - Metro Boomin Future Superhero Heroes Villains Official Music Video_480p.mp4", 
+              "./assets/videos/video2.mp4", 
             ];
             var activeVideo = 0;
             activeVideo = Math.floor(Math.random() * myvids.length);
