--- a/index.html
+++ b/index.html
@@ -44,19 +44,15 @@
       </div>
       <div class="container" style="display: none;">
          <h1 class="brand-header">
-            <a class="discord" href="" target="">j2sh</a>
+            <a class="discord" href="" target=""🧌>j2sh</a>
          </h1>
+
          <h3 class="brand-header">
-            <a class="discord" href="https://discord.gg/mewhub" target="_BLANK"> 🧌</a>
+            <a class="discord" href="https://discord.gg/mewhub" target="_BLANK">📌discord</a>
          </h3>
+
          <h3 class="brand-header">
-            <a class="discord" href="https://discord.gg/mewhub" target="_BLANK">discord</a>
-         </h3>
-         <h3 class="brand-header">
-            <a class="youtube" href="https://www.youtube.com/channel/UCFovORxhtayDW5rmcINy8qQ" target="_BLANK">   📌</a>
-         </h3>
-         <h3 class="brand-header">
-            <a class="youtube" href="https://www.youtube.com/channel/UCFovORxhtayDW5rmcINy8qQ" target="_BLANK">youtube</a>
+            <a class="youtube" href="https://www.youtube.com/channel/UCFovORxhtayDW5rmcINy8qQ" target="_BLANK">📌youtube</a>
          </h3>
          <!--
          <h3 class="brand-header">
